--- a/static/css/humanresource/member_efficiency.css
+++ b/static/css/humanresource/member_efficiency.css
@@ -12,7 +12,7 @@
 /* 운행량 관련 CSS: run-*/
 .run-container {
     width: 23%;
-    height: 72.5rem;
+    height: 75rem;
 
     display: flex;
     flex-direction: column;
@@ -44,6 +44,17 @@
     color: white;
     font-weight: 400;
     font-size: 16px;
+}
+
+.total-run-content-box {
+    width: 100%;
+    height: calc(100% - 4rem);
+    background-color: white;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .total-run-chart-box {
@@ -100,10 +111,36 @@
     color: white;
 }
 
+.total-run-average-figure-box {
+    width: 90%;
+    height: calc(100% - 22rem);
+    background-color: #3D36FF;
+    border-radius: 17px;
+}
+
+.total-run-average-figure-title-box {
+    width: 100%;
+    height: 4rem;
+    background-color: #444444;
+    border-radius: 17px 17px 0% 0%;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.total-run-average-figure-title-label {
+    color: white;
+    font-weight: 400;
+    font-size: 16px;
+    margin-left: 2rem;
+}
+
 /* 개인 운행량 CSS: personal- */
 .personal-run-box {
     width: 100%;
-    height: 43%;
+    height: 44%;
     background-color: white;
     border-radius: 17px;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
@@ -127,6 +164,17 @@
     font-size: 16px;
 }
 
+.personal-run-content-box {
+    width: 100%;
+    height: calc(100% - 4rem);
+    background-color: white;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
 .personal-run-chart-box {
     width: 100%;
     height: 15rem;
@@ -140,7 +188,7 @@
 .personal-run-pie-chart {
     width: 12rem;
     height: 12rem;
-    background: conic-gradient(#3D36FF 25% 76%, #FF8585 0% 24%);
+    background: conic-gradient(#3D36FF 25% 76%, #EFFF8D 0% 24%);
     border-radius: 50%;
 
     display: flex;
@@ -167,11 +215,36 @@
     background-color: #3D36FF;
 }
 
+.personal-run-average-figure-box {
+    width: 90%;
+    height: calc(100% - 16rem);
+    background-color: #3D36FF;
+    border-radius: 17px;
+}
+
+.personal-run-average-figure-title-box {
+    width: 100%;
+    height: 4rem;
+    background-color: #444444;
+    border-radius: 17px 17px 0% 0%;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.personal-run-average-figure-title-label {
+    color: white;
+    font-weight: 400;
+    font-size: 16px;
+    margin-left: 2rem;
+}
+
 /* 검색 관련 CSS: search- */
 .search-container {
     width: 75%;
-    height: 72.5rem;
-    background-color: antiquewhite;
+    height: 75rem;
 
     display: flex;
     flex-direction: column;
@@ -186,6 +259,83 @@
     background-color: white;
     border-radius: 17px;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.search-dispatch-path {
+    width: 23rem;
+    height: 3rem;
+    
+    margin-left: 1.5rem;
+}
+
+.search-dispatch-path-date {
+    width: 15rem;
+    height: 3rem;
+    
+    margin-left: 1rem;
+}
+
+.dispatch-path-today-button {
+    border: none;
+    border-radius: 8px;
+
+    width: 5rem;
+    height: 3rem;
+    background-color: #1C1A4E;
+
+    text-align: center;
+    font-size: 1.2rem;
+    font-weight: 500;
+    color: white;
+    
+    margin-left: 1rem;
+}
+
+.dispatch-path-today-button:active {
+    color: gray;
+}
+
+.day-before-button {
+    border: none;
+    background: url("/static/images/dayBeforeButton.png") no-repeat;
+    width: 35px;
+    height: 35px;
+
+    margin-left: 1.5rem;
+}
+
+.day-after-button {
+    border: none;
+    background: url("/static/images/dayAfterButton.png") no-repeat;
+    width: 35px;
+    height: 35px;
+
+    margin-left: 1rem;
+}
+
+.dispatch-path-search-button {
+    border: none;
+    border-radius: 8px;
+
+    width: 5rem;
+    height: 3rem;
+    background-color: #1C1A4E;
+
+    text-align: center;
+    font-size: 1.2rem;
+    font-weight: 500;
+    color: white;
+    
+    margin-left: 1.5rem;
+}
+
+.dispatch-path-search-button:active {
+    color: gray;
 }
 
 /* 상세 검색: detail  */
@@ -197,19 +347,163 @@
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
 
+.search-detail-table {
+    width: 100%;
+    height: 100%;
+}
+
+.name-td {
+    width: 15rem;
+    height: 50%;
+    background-color: #444444;
+    border-top-left-radius: 17px;
+
+    color: white;
+    font-size: 16px;
+    font-weight: 500;
+    text-align: center;
+}
+
+.name-input-td-background {
+    width: calc(100% - 15rem);
+    text-align: center;
+}
+
+.name-input-td {
+    width: 90%;
+    height: 60%;
+    border-color: #444444;
+    border-width: 1px;
+    border-radius: 6px;
+}
+
+.work-time-td {
+    width: 15rem;
+    height: 50%;
+    background-color: #444444;
+
+    color: white;
+    font-size: 16px;
+    font-weight: 500;
+    text-align: center;
+}
+
+.work-time-input-td {
+    width: 90%;
+    height:100%;
+    background-color: white;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.work-time {
+    margin: 1rem;
+}
+
+.work-time-label {
+    font-size: 16px;
+    font-weight: 500;
+    color: #a4a4a4;
+}
+
+.salary-td {
+    width: 15rem;
+    height: 50%;
+    background-color: #444444;
+    border-bottom-left-radius: 17px;
+
+    color: white;
+    font-size: 16px;
+    font-weight: 500;
+    text-align: center;
+}
+
+.salary-input-td-background {
+    width: calc(100% - 15rem);
+    text-align: center;
+}
+
+.salary-input-td {
+    width: 90%;
+    height: 60%;
+    border-color: #444444;
+    border-width: 1px;
+    border-radius: 6px;
+}
+
+.salary-form-td {
+    width: 15rem;
+    height: 50%;
+    background-color: #444444;
+
+    color: white;
+    font-size: 16px;
+    font-weight: 500;
+    text-align: center;
+}
+
+.salary-form-input-td-background {
+    width: calc(100% - 15rem);
+    text-align: center;
+}
+
+.salary-form-input-td {
+    width: 90%;
+    height: 60%;
+    border-color: #444444;
+    border-width: 1px;
+    border-radius: 6px;
+}
+
 /* 필터: filter  */
 .search-filter-box {
     width: 100%;
-    height: 5rem;
-    background-color: white;
+    height: 4rem;
+    
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.search-filter-button {
+    border: none;
+    border-radius: 8px;
+
+    width: 5rem;
+    height: 3rem;
+    background-color: #444444;
+
+    text-align: center;
+    font-size: 1.2rem;
+    font-weight: 500;
+    color: white;
+}
+
+.search-filter-button:active {
+    color: gray;
+}
+
+.sales-filter {
+    width: 10rem;
+    height: 3rem;
+
+    margin-left: 3rem;
 }
 
 /* 표: table */
 .search-table-box {
     width: 100%;
-    height: 50rem;
+    height: 52.5rem;
     background-color: white;
     border-radius: 17px;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
 
+.table-list_head-tr {
+    border-radius: 17px;
+}
+
+/* 번호, 등급, 이름, 팀, 급여, 목표운행량, 매출액, KM, 시간, 유류비, 공차, 최초 고용일, 근무형태 */
