--- a/static/css/humanresource/member_route.css
+++ b/static/css/humanresource/member_route.css
@@ -5,7 +5,6 @@
 .all-container {
     width: 100%;
     height: 75rem;
-    background-color: blue;
 
     display: flex;
     flex-direction: row;
@@ -22,7 +21,6 @@
 .left-container {
     width: 20%;
     height: 80%;
-    background-color: red;
 
     display: flex;
     flex-direction: column;
@@ -34,19 +32,94 @@
     width: 90%;
     height: 48%;
     background-color: white;
+    border-radius: 17px;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.personal-status-title-div {
+    width: 100%;
+    height: 4rem;
+    text-align: center;
+    line-height: 4rem;
+
+    border-top-left-radius: 17px;
+    border-top-right-radius: 17px;
+}
+
+.personal-status-chart-div {
+    width: 100%;
+    height: calc(100% - 8rem);
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.personal-status-pie-chart {
+    width: 16rem;
+    height: 16rem;
+    background: conic-gradient(#3D36FF 25% 76%, #FF8585 0% 24%);
+    border-radius: 50%;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.personal-status-pie-chart-center {
+    width: 8rem;
+    height: 8rem;
+    line-height: 8rem;
+    background-color: white;
+    border-radius: 50%;
+    text-align: center;
+    font-size: 18px;
+
+    display: block;
+}
+
+.personal-status-name-div {
+    width: 100%;
+    height: 4rem;
+
+    display: flex;
+    flex-direction: row;
+}
+
+.personal-status-name-span {
+    font-weight: 600;
+    font-size: 20px;
+    margin-left: 1rem;
 }
 
 .search-container {
     width: 90%;
     height: 48%;
     background-color: white;
+    border-radius: 17px;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+}
+
+.search-title-div {
+    width: 100%;
+    height: 4rem;
+    text-align: center;
+    line-height: 4rem;
+
+    border-top-left-radius: 17px;
+    border-top-right-radius: 17px;
 }
 
 /* MARK: Right */
 .right-container {
     width: 80%;
     height: 100%;
-    background-color: green;
 
     display: flex;
     flex-direction: column;
@@ -56,8 +129,10 @@
 
 .graph-container {
     width: 98%;
-    height: 35%;
+    height: 39%;
     background-color: white;
+    border-radius: 17px;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 
     display: flex;
     flex-direction: row;
@@ -72,31 +147,49 @@
     writing-mode: vertical-lr;
     text-orientation: upright;
     letter-spacing: 1rem;
+
+    border-top-left-radius: 17px;
+    border-bottom-left-radius: 17px;
 }
 
 .mixed-chart-div {
     width: calc(100% - 4rem);
     height: 100%;
+
+    border-bottom-right-radius: 17px;
 }
 
 .mixed-chart-description-div {
     width: 100%;
-    height: 20%;
+    height: 15%;
+}
+
+.mixed-chart-graph-div {
+    width: 100%;
+    height: 85%;
+    background-color: white;
+
+    position: relative;
+    border-bottom-right-radius: 17px;
 }
 
 #mixed-chart {
-    width: 100%;
-    height: 80%;
-}
-
-.filter-container {
-    width: 98%;
-    height: 5%;
-    background-color: white;
+    width: 125rem;
+    height: 100%;
 }
 
 .table-container {
     width: 98%;
-    height: 65%;
+    height: 59%;
     background-color: white;
+    border-radius: 17px;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+}
+
+.top-left-radius-td {
+    border-top-left-radius: 17px;
+}
+
+.top-right-radius-td {
+    border-top-right-radius: 17px;
 }
